# persite

./: .env  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/db/: connection.rs  mod.rs
src/misc/: env_reader.rs  mod.rs
src/routers/: about.rs  index.rs  layout.rs  mod.rs
static/css/: style.css
templates/: about.html  index.html  layout.html
