[package]
name = "persite"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.7"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
