# Generated using sea-orm-cli.
[package]
name = "migration"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.19"
features = [
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
